[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Roboto-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 58
font_data = ExtResource( 2 )

[sub_resource type="InputEventKey" id=5]

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 0.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "My score: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_left = -0.619568
margin_top = -0.619598
margin_right = -0.619568
margin_bottom = 77.3804
custom_fonts/font = SubResource( 2 )
text = "AI score: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Go FA*!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -100.0
margin_right = 90.0
custom_fonts/font = SubResource( 4 )
shortcut = SubResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
